--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,16 @@
 name: dio_brotli_transformer
 description: Brotli support for Dio http client
-version: 0.2.1
+version: 0.1.0
 homepage: https://github.com/vycius/dio_brotli_transformer
 
 environment:
-  sdk: ">2.4.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  dio: ">=3.0.0 <4.0.0"
-  brotli: ^0.4.0
+  brotli: ^0.5.0
+  dio: ">=4.0.0 <5.0.0"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  lint: ^1.3.0
