--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,14 @@ version: 1.0.1
 homepage: https://github.com/vycius/dio_brotli_transformer
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
-  brotli: ^0.5.0
-  dio: ">=4.0.0 <5.0.0"
+  brotli: ^0.6.0
+  dio: ">=5.0.0 <6.0.0"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  lint: ^1.3.0
+  lint: ^2.1.2
+  test: ^1.24.3
