--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+*'
 
+permissions:
+  id-token: write
+
 jobs:
   publish:
     uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
